Fix Image Width Issue on IE and Firefox

--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -43,7 +43,7 @@ a:hover {
 }
 
 /* focus state for keyboard nav */
-a:focus, a:active {
+a:focus {
 	@extend a:hover;
 	box-shadow: 0 0 2px 3px #78aeda, 0 0 2px #78aeda inset;
 	border-radius: 3px;
